--- a/backend/package.json
+++ b/backend/package.json
@@ -1,13 +1,13 @@
 {
   "name": "node-wksp-1",
   "version": "0.5.0",
-  "description": "This is our first Node Workshop!",
+  "description": "FaceSpace",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev:backend": "nodemon server.js"
   },
-  "author": "Scott Morin <scott@journeyedu.co>",
+  "author": "Hasti Afra",
   "license": "MIT",
   "dependencies": {
     "express": "^4.17.1",
